--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "main": "./index.js",
   "scripts": {
-    "test": "npm run mochaTests",
-    "mochaTests": "mocha --compilers js:babel-register --slow 350",
-    "watch": "nodemon --exec 'npm run mochaTests' --watch index.js --watch test --ext js",
+    "test": "npm run mochaTest",
+    "mochaTest": "mocha --compilers js:babel-register --timeout 20000 --slow 350",
+    "watch": "nodemon --exec 'npm run mochaTest' --watch index.js --watch test --ext js",
     "lint": "eslint **/*.js --quiet",
     "pretest": "npm run lint"
   },
   "devDependencies": {
+    "babel-cli": "6.6.5",
     "babel-eslint": "5.0.0",
     "babel-polyfill": "6.7.2",
     "babel-preset-es2015": "6.6.0",
