--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
   "name": "cliable",
   "version": "0.1.0",
-  "main": "./dist/index.js",
+  "main": "./index.js",
+  "engines": {
+    "node": ">=4.0"
+  },
   "scripts": {
     "test": "npm run mochaTest",
-    "mochaTest": "mocha --compilers js:babel-register --timeout 20000 --slow 350",
-    "watch": "nodemon --exec 'npm run mochaTest' --watch index.js --watch test --ext js",
+    "mochaTest": "mocha",
+    "watch": "nodemon --exec 'mocha' --watch index.js --watch test --ext js",
     "lint": "eslint **/*.js --quiet",
     "pretest": "npm run lint"
   },
   "devDependencies": {
-    "babel-cli": "6.6.5",
     "babel-eslint": "5.0.0",
-    "babel-polyfill": "6.7.2",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-stage-0": "6.5.0",
-    "babel-register": "6.7.2",
     "eslint": "2.2.0",
     "expect": "1.15.2",
     "mocha": "2.4.5",
